Fix typos and add sentence

--- a/week1/june-22-2020.md
+++ b/week1/june-22-2020.md
@@ -12,12 +12,10 @@ Hopefully anyone looking at this in the near future (or the distant!) will find 
 
 ## Meeting the other Team Seneca Cohort members
 
-We are calling ourselves Team Seneca, after the Roman Stoic Philopher of antiquity. Maybe we will imbibe his stoic spirit when we are being confounded by the endless
-parantheses and terse syntax.
+We are calling ourselves Team Seneca, after the Roman Stoic Philopher of antiquity. Maybe we will imbibe his stoic spirit when we are being confounded by the endlessparantheses and terse syntax.
 
-Introductions were made and from what I can tell, we all seem to be a diverse group of people with different technical backgrounds. The thing that unites is wanting
-to learn more about unique languages and technologies. As I mentioned in my first [Learning in Public](https://itsrainingmani.dev/learning/clojure/cohort-clojure-fam),
-the [person](https://twitter.com/adrien) who inspired to me join the _#ClojureFam_ program is also part of this cohort. So I look forward to interacting with them more.
+Introductions were made and from what I can tell, we all seem to be a diverse group of people with different technical backgrounds. The thing that unites us is wanting
+to learn more about unique languages and technologies. As I mentioned in my first [Learning in Public](https://itsrainingmani.dev/learning/clojure/cohort-clojure-fam) post, [adrien](https://twitter.com/adrien) who inspired to me join the _#ClojureFam_ program is also part of this cohort. So I look forward to interacting with them and the other Cohort members more!
 
 ## Clojure itself: Elegant Constructs for a more Civilized Age
 
@@ -35,9 +33,10 @@ It basically boils down to:
 - Customizability!
 
 Today, I spent quite some time setting up a [separate part](https://itsrainingmani.dev/learning) of my website dedicated to Learning in Public. I also decided that
-it was best to make a fresh start of this and fired up Emacs and began acquainting myself with Clojure and CIDER workflows.
+it was best to make a fresh start of this and fired up Emacs and began acquainting myself with Clojure and CIDER workflows. (I'm
+maintaining Cheatsheets for Emacs keybinds on my Obsidian Knowledge repo. It might be a good idea to make that more public facing).
 
-After trying out VSCode and Calva briefly, I can't help but notice that the Emacs setup feels superior. Not only is the REPL more crisp and quick to respond,
+After trying out VSCode and Calva briefly, I can't help but notice that the Emacs setup feels better. Not only is the REPL more crisp and quick to respond,
 the keybindings seem to be more intuitive than VSCode's. Looks like I'm "stuck" with Emacs for the foreseeable future.
 
 I didn't end up doing much Clojure work in the end, but I think that I've set myself in a comfortable position for faster learning in the future since I don't need
