--- a/week1/june-23-2020.md
+++ b/week1/june-23-2020.md
@@ -76,7 +76,7 @@ This one has some interesting constraints. For one, the inputs can be lists, vec
 After that little functional composition revelation I had, I decided to leverage some pretty powerful functions, namely `map` and `reduce`.
 No FP language can be complete without these two.
 
-![three-fp](week1/assets/always-you-three.png)
+![Always you three](assets/always-you-three.png)
 
 My original solution:
 
