Fix link again cuz I didn't really fix it last time

--- a/week1/june-24-2020.md
+++ b/week1/june-24-2020.md
@@ -73,7 +73,7 @@ This is very contrived way of solving the problem. Let's break it down.
 
 The base condition is that if the collection has 2 elements, we flip them and return. I made the assumption that the output had to be list. This impacted how I approached the problem, since `conj` behaves differently on lists and vectors.
 
-*@adrien[https://twitter.com/adriend]* made the other assumption leading to a more elegant use of `conj`
+*[@adrien](https://twitter.com/adrien)* made the other assumption leading to a more elegant use of `conj`
 
 ```clojure
 (fn rev [coll]
