Add bullet point to take-away

--- a/week2/june-29-2020.md
+++ b/week2/june-29-2020.md
@@ -187,10 +187,11 @@ To be perfectly honest, the solution I have feels a little complicated for what 
 
 ## Takeaways
 
-* Use namespaces for code organization and isolation of code by concern.
-* Tests allow you to verify that our code is correct.
+* Use namespaces for code organization and isolation of code by concern
+* Tests allow you to verify that our code is correct
 * We can use open source libraries in our code for additional features and functions
 * Clojure is very powerful when it comes to data processing!
+* `partition-by` is useful for solving problems related to consecutive sequences
 
 Today's Tally:
 
