Complete the July 13th Post

--- a/week4/july-13-2020.md
+++ b/week4/july-13-2020.md
@@ -76,3 +76,19 @@ Promises allow you to express that you expect a result without having to define 
 * Create a promise and deliver a value to it
 * Can only deliver a value to a promise once
 * Decouples the requirement for a result from how the result from how the result is actually computed. Can perform multiple computations in parallel.
+
+1. Future - Define a task and run it immediately on a different thread
+2. Delay - Define a task that doesn't get executed until later
+3. Promise = Express that you require a result without having to know about the task that produces that result
+
+## Takeaways
+
+Concurrency and Parallelism allow us to take advantage of modern computing hardware to design programs that run efficiently.
+
+Clojure has a lot of abstractions and tools that allow us programmers to not bogged down by the three goblins of concurrency.
+
+1. Future - Define a task and run it immediately on a different thread
+2. Delay - Define a task that doesn't get executed until later
+3. Promise = Express that you require a result without having to know about the task that produces that result
+
+I didn't complete the chapter exercises for this chapter but it sounded pretty interesting and I want to tackle them soon.
