Add notes from ch11

--- a/week5/july-20-2020.md
+++ b/week5/july-20-2020.md
@@ -68,3 +68,13 @@ Solution to make `pmap` take less time is to increase the grain size. (applying 
 @player2
 ;; => {:handle "Asuna", :hitpoints 33/40, :inventory {:healing-potion 0}}
 ```
+
+## Chapter 11
+
+core.async describes a useful model for concurrency and processes.
+
+* process -> concurrently running unit of logic that responds to events
+* `go` - creates a new process. `go` blocks execute concurrently on a separate thread.
+* `<!` - take function. Listens to the channel and the process waits until a message arrives in the channel.
+* use chan buffers to put multiple values into a channel without waiting
+* parking - frees up the thread so it can keep doing work. allows instructions from multiple processes to interleave on a single thread. only possible within `go` blocks.
