Complete July 20th post

--- a/week5/july-20-2020.md
+++ b/week5/july-20-2020.md
@@ -1,5 +1,13 @@
 # ClojureFam - Week 5 - Day 1
 
+Ah how soon ClojureFam is coming to an end. This marks the last week of the program. But I have a good feeling that I will continue to be a part of the community even after the program ends.
+
+Today we continue where we left off with Chapter 10! And by golly was I able to get through a lot today! Ch11 and Ch12 too! But I ended up kinda skimming through the chapters a little bit because I wanted to get through them.
+
+I definitely have to come back to the chapter about `core.async` because its really fun and I think I should have a deeper understanding of it.
+
+## What I learned today
+
 Concurrent-ify tasks that are completely independent of each other.
 No risk since there is no shared access to a mutable state
 
@@ -18,7 +26,7 @@ grain size - amount of work done by each parallelized task. Sometimes, the overh
 
 Solution to make `pmap` take less time is to increase the grain size. (applying the mapping function to two elements instead of one)
 
-### Chapter Exercises
+### Chapter 10 Exercises
 
 1. Create an atom with the initial value 0, use swap! to increment it a couple of times, and then dereference it.
 
@@ -69,7 +77,7 @@ Solution to make `pmap` take less time is to increase the grain size. (applying 
 ;; => {:handle "Asuna", :hitpoints 33/40, :inventory {:healing-potion 0}}
 ```
 
-## Chapter 11
+### Chapter 11
 
 core.async describes a useful model for concurrency and processes.
 
@@ -78,3 +86,90 @@ core.async describes a useful model for concurrency and processes.
 * `<!` - take function. Listens to the channel and the process waits until a message arrives in the channel.
 * use chan buffers to put multiple values into a channel without waiting
 * parking - frees up the thread so it can keep doing work. allows instructions from multiple processes to interleave on a single thread. only possible within `go` blocks.
+
+### Chapter 12 - JVM
+
+Working with the JVM!
+
+* Clojure is hosted on the JVM.
+* Need to use Java objects for core functionality like reading files and dates
+* Java has a lot of libraries
+
+The JVM translates code into low-level instructions called *Java Bytecode*. 
+JIT compilation - A running JVM executes bytecode by translating it on the fly into into machine code that its host will understand.
+
+* Compile a program into a .class file -> packaged into a JAR file -> JVM executes the bytecode -> JVM sends machine instructions to the CPU.
+
+* `(:gen-class)` - Clojure compiler generates a class for the namespace
+* Define a `-main` function in a namespace, include `(:gen-class)` and set the `:main` directive in *project.clj* ot let the program be compiled by Java as a JAR.
+
+### Interop
+
+Call methods on an object using `(.methodName object)`. This uses macros to expand the *dot special form*.
+
+```clojure
+(macroexpand-1 '(.toUpperCase "By Bluebeard's bananas!"))
+; => (. "By Bluebeard's bananas!" toUpperCase)
+
+(macroexpand-1 '(.indexOf "Let's synergize our bleeding edges" "y"))
+; => (. "Let's synergize our bleeding edges" indexOf "y")
+
+(macroexpand-1 '(Math/abs -3))
+; => (. Math abs -3)
+```
+
+Create objects with `(new ClassName opt-args)` or `(Classname. opt-args)`
+
+Importing has the same effect as it does in Java -> You can use classes without having to type out the entire package prefix.
+
+`(import java.util.Stack.)`
+
+Within a `ns` macro - 
+
+```clojure
+(ns pirate.talk
+  (:import [java.util Date Stack]
+           [java.net Proxy URI]))
+```
+
+You can use seq functions to read data from a stack. But can't use conj or into
+
+```clojure
+(doto (java.util.Stack.)
+  (.push "Latest ep of GoT")
+  (.push "Whoops, I meant something else"))
+
+;; doto returns the object rather than the value of the method calls
+
+(System/getenv)
+
+(System/getProperty "user.dir")
+;; => "/Users/mani/repos/learn-clojure-in-public/code/clojure-noob"
+
+(System/getProperty "java.version")
+;; => "14.0.1"
+```
+
+IO with Clojure - 
+
+```clojure
+(spit "/tmp/hercules-todo-list"
+      "- kill dat lion brov
+- chop up what nasty multi-headed snake thing")
+
+(slurp "/tmp/hercules-todo-list")
+;; => "- kill dat lion brov\n- chop up what nasty multi-headed snake thing"
+
+(with-open [todo-list-str (clojure.java.io/reader "/tmp/hercules-todo-list")]
+  (println (first (line-seq todo-list-str))))
+;; => kill dat lion bruv
+```
+
+## Takeaway
+
+I went through quite a few different pieces of information about Clojure today. But the downside is that I didn't gain a deep understanding of it. So I'll have to go back and understand it.
+
+Today's tally - 
+* Complete ch 10
+* Complete ch 11
+* Complete ch 12
