Complete July 21st Post with all sections

--- a/week5/july-21-2020.md
+++ b/week5/july-21-2020.md
@@ -1,16 +1,24 @@
 # ClojureFam - Week 5 - Day 2
 
+It's been a whole month. A whole month of Learning Clojure in Public. On this momentous day, I'm very happy to say that I'm completing the final chapter of Brave Clojure and bringing that whole saga to an end.
+
+## Expectations
+
+Today I wanted to complete Chapter 13, revisit parts of Chapter 11 (core.async) and also work a little bit on the next Team Seneca issue. I'm glad to say that I was able to do all of these things.
+
+## Chapter 13
+
 Let's take a look at Chapter 13 today - Creating and Extending Abstractions with Multimethods, Protocols, and Records.
 
-Abstractions - tie together disparate details into a conceptual package that you can hold in working memory
+- Abstractions - tie together disparate details into a conceptual package that you can hold in working memory
+- Clojure - abstraction = collections of operations. data types implement abstractions.
+- Implementing an abstraction -> associating an operation name with more than one algorithm. (polymorphism).
 
-Clojure - abstraction = collections of abstractions. data types implement abstractions.
+### Multimethods
 
-Implementing an abstraction -> associating an operation name with more than one algorithm. (polymorphism).
+A multimethod is a tool for defining polymorphic behavior.
 
-Multimethods -> tool for defining polymorphic behavior.
-
-associate a name with multiple implementations by defining a *dispatching function* which *dispatching values* that are used to determine which method to use.
+- associate a name with multiple implementations by defining a _dispatching function_ which _dispatching values_ that are used to determine which method to use.
 
 ```clojure
 (defmulti full-moon-behavior (fn [were-creature] (:were-type were-creature)))
@@ -34,9 +42,7 @@ associate a name with multiple implementations by defining a *dispatching functi
 ;; => "Andy the baker will encourage people and sweat to the oldies"
 ```
 
-You can always extend the multimethod to handle new dispatch values.
-
-multimethods - allow dispatch on multiple arguments and arbitrary values.
+You can always extend the multimethod to handle new dispatch values. Multimethods allow dispatch on multiple arguments and arbitrary values.
 
 ```clojure
 (defmulti types (fn [x y] [(class x) (class y)]))
@@ -48,9 +54,9 @@ multimethods - allow dispatch on multiple arguments and arbitrary values.
 ;; => "Two Strings!"
 ```
 
-Protocols - dispatch methods according to an argument's type. More efficient than multimethods for type dispatch.
+### Protocols
 
-Multimethod is one polymorphic operation whereas a protocol is a collection of one or more polymorphic operations.
+Protocols dispatch methods according to an argument's type. More efficient than multimethods for type dispatch. Multimethod is one polymorphic operation whereas a protocol is a collection of one or more polymorphic operations.
 
 With a protocol, you're defining an abstraction. You're reserving names for behavior, but you haven't defined the behavior yet.
 
@@ -63,7 +69,7 @@ With a protocol, you're defining an abstraction. You're reserving names for beha
 ;; method signature - name, argument specification and optional docstring
 ```
 
-Extend the string data type to *implement* the Psychodynamics protocol - 
+Extend the string data type to _implement_ the Psychodynamics protocol -
 
 ```clojure
 (extend-type java.lang.String
@@ -111,7 +117,7 @@ You can use `extend-protocol` to define protocol implementations for multiple ty
   (feelings-about
     ([x] "longing for a simpler way of life")
     ([x y] (str "envious of " y "'s simpler way of life")))
-  
+
   java.lang.Object
   (thoughts [x] "Maybe the Internet is just a vector for toxoplasmosis")
   (feelings-about
@@ -119,7 +125,9 @@ You can use `extend-protocol` to define protocol implementations for multiple ty
     ([x y] (str "meh about " y))))
 ```
 
-Records - Custom, maplike data types.
+### Records
+
+Records are custom, maplike data types.
 
 ```clojure
 ;;         name     fields
@@ -138,9 +146,8 @@ Records - Custom, maplike data types.
 ;; => {:name "Lucian", :title "CEO of YouTube"}
 ```
 
-Since record are actually Java Classes underneath, you can create a record using the class interop syntax.
+Since records are actually Java Classes underneath, you can create a record using the class interop syntax.
 `->` and `map->` are factory functions for records.
-
 
 If you want to use a record in a different namespace, you have to use `:import` instead of `:require`.
 
@@ -162,7 +169,7 @@ You can extend a record to implement a protocol.
 
 Maps vs Records - use records when you find yourself creating maps with the same fields over and over. Records tell you that the set of data has some meaning in your application domain and access is more performant than map access.
 
-Chapter Exercises
+### Exercises
 
 1. Extend the full-moon-behavior multimethod to add behavior for your own kind of were-creature.
 
@@ -206,3 +213,39 @@ Chapter Exercises
 (wear-wolf "shoes")
 ;; => "This Wolf is wearing shoes"
 ```
+
+## Page Deletion Issue
+
+We in Team Seneca are working on this issue currently - https://github.com/athensresearch/athens/issues/292.
+
+@alaq and @nthd3gr33 made some progress on implementing the "delete page" functionality. Today we got together virtually to discuss how to delete a page and by extension all the child blocks that are within it.
+
+We looked through the code to see if there were any functions already existing that recursively extracted children and found the `deepest-child-block` function. Now it doesn't quite do what we want it to do but it did give us some inspiration.
+
+After deconstructing what the function did, we tried to implement a version of Bread First Traversal that would allow us to traverse through the given block's children and add it to a vector.
+
+I had an _aha_ moment with this problem after reading about the `tree-seq` function. This function walks through the given data structure in a Depth First fashion and returns a lazy sequence of the nodes.
+
+The solution ended up being quite concise all thanks to the power of the Clojure Core library -
+
+```clojure
+(defn get-children-recursively
+  "Get list of children UIDs for given block ID"
+  [id]
+  (let [document (->> @(pull dsdb '[:block/order :block/uid {:block/children ...}] id))]
+    (map :block/uid (tree-seq :block/children :block/children document))))
+```
+
+## Takeaways
+
+Chapter 13 is fascinating since it shows you how to implement your own Abstractions. Abstractions are wonderful since it allows you to condense complex topics into a easily grokkable nugget.
+
+We took a look at Multimethods, Protocols and Records in Clojure. Clojure defines abstractions as a collection of operations. And Clojure data types implement abstractions. This eases the mental load for us Clojurists, since we just have to understand the capabilities of particular abstraction to effectively use data structures.
+
+30 Days of Learning in Public has been quite the journey. I've learnt how to use Clojure, ClojureScript, tenets of functional programming and contributing to a large open-source project. But it has also been hard to dedicate time everyday and in writing these daily posts. I do think the positives severely outweigh the negatives in this case.
+
+To wrap up, Let's take a look at what I've done today
+
+- Complete Chapter 13
+- Revisit Chapter 11 (not bankruptcy)
+- Figure out how to get all children UIDs for a given block ID
